# MathSolver

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  DESIGN.md  README.md  REVIEW-NOTES.md  compose.yaml
.github/workflows/: ci.yml  cloudflare-pages.yml  deploy.yml
apps/: main.cpp
apps/ink/: .gitignore  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
apps/ink/scripts/: e2e.mjs
apps/ink/src/: cli.tsx
apps/ink/src/core/: caret.ts  execute.ts  format.ts  help.ts  intent.ts  outcome.ts  outline.ts  run.ts  text.ts
apps/ink/src/engine/: engine.ts  load.ts  module.d.ts  types.ts
apps/ink/src/ui/: App.tsx  theme.tsx
apps/ink/test/: app.test.tsx  caret.test.ts  execute.test.ts  format.test.ts  intent.test.ts  stub.ts  text.test.ts
apps/ink/wasm/: README.md
docker/: Dockerfile.dev  dev-entrypoint.sh
docs/: DEPLOY.md  DOCKER.md  GRAMMAR.md  MCP.md  PLUGINS.md  ROADMAP.md
docs/proposals/: bigint.md  cancel-poly-gcd.md  complex-domain.md  console-language.md  enterprise-features.md  grapher-functions.md  inequalities.md  next-features.md  step-by-step.md  together.md  variable-assignment.md  wave-system.md  web-ux-findings.md
include/mathsolver/: apart.hpp  bigint.hpp  cfrac.hpp  derivative.hpp  discrete.hpp  discriminant.hpp  errors.hpp  evaluator.hpp  expr.hpp  fit.hpp  inequality.hpp  integrate.hpp  limit.hpp  logexpand.hpp  mathsolver.hpp  numtheory.hpp  ode.hpp  orthopoly.hpp  pade.hpp  parser.hpp  plugin.hpp  polydiv.hpp  printer.hpp  rational.hpp  series.hpp  simplify.hpp  solver.hpp  stats.hpp  steps.hpp  sturm.hpp  transform.hpp  trig.hpp  vector_calculus.hpp
include/mathsolver/script/: environment.hpp  script.hpp  statement.hpp  value.hpp
mcp/: json.cpp  json.hpp  main.cpp  server.cpp  server.hpp
plugins/: register_builtin.cpp
plugins/dsp/: dsp.cpp  dsp_design.cpp  dsp_design.hpp
plugins/fem/: fem.cpp  fem_core.cpp  fem_core.hpp
plugins/hyb/: hyb.cpp  hyb_core.cpp  hyb_core.hpp
plugins/ie/: ie.cpp  ie_core.cpp  ie_core.hpp
plugins/linalg/: linalg.cpp  linalg_core.cpp  linalg_core.hpp
plugins/pde/: pde.cpp  pde_core.cpp  pde_core.hpp
plugins/prob/: prob.cpp  prob_core.hpp
plugins/sys/: sys.cpp  sys_lti.cpp  sys_lti.hpp
src/: apart.cpp  bigint.cpp  cancel.cpp  cfrac.cpp  derivative.cpp  discrete.cpp  discriminant.cpp  evaluator.cpp  expr.cpp  fit.cpp  inequality.cpp  integrate.cpp  limit.cpp  logexpand.cpp  numtheory.cpp  ode.cpp  orthopoly.cpp  pade.cpp  parser.cpp  plugin.cpp  polydiv.cpp  polyfactor.hpp  printer.cpp  rational.cpp  series.cpp  simplify.cpp  solver.cpp  stats.cpp  steps.cpp  sturm.cpp  together.cpp  transform.cpp  trig.cpp  vector_calculus.cpp
src/script/: environment.cpp  statement.cpp  value.cpp
tests/: CMakeLists.txt  resolution_vectors.tsv  test_apart.cpp  test_bigint.cpp  test_cancel.cpp  test_cfrac.cpp  test_cli.cpp  test_derivative.cpp  test_discrete.cpp  test_discriminant.cpp  test_evaluator.cpp  test_expr.cpp  test_fit.cpp  test_inequality.cpp  test_integrate.cpp  test_limit.cpp  test_logexpand.cpp  test_mcp.cpp  test_numtheory.cpp  test_ode.cpp  test_orthopoly.cpp  test_pade.cpp  test_parser.cpp  test_plugin_dsp.cpp  test_plugin_fem.cpp  test_plugin_hyb.cpp  test_plugin_ie.cpp  test_plugin_linalg.cpp  test_plugin_pde.cpp  test_plugin_prob.cpp  test_plugin_sys.cpp  test_polydiv.cpp  test_printer.cpp  test_rational.cpp  test_script.cpp  test_series.cpp  test_simplify.cpp  test_simplify_review.cpp  test_smoke.cpp  test_solver.cpp  (+10 more)
tests/acceptance/: README.md  cases.tsv  eval_cases.tsv  printer_cases.tsv  v04_cases.tsv
tools/: build_wasm.sh  console_transcript_test.mjs  fuzz_roundtrip.cpp  graph_animate_test.mjs  graph_calculus_test.mjs  graph_classify_test.mjs  graph_contour_test.mjs  graph_fit_test.mjs  graph_functions_engine_test.mjs  graph_functions_test.mjs  graph_inline_sum_engine_test.mjs  graph_lists_engine_test.mjs  graph_lists_test.mjs  graph_piecewise_engine_test.mjs  graph_pole_break_test.mjs  graph_share_test.mjs  graph_slopefield_test.mjs  graph_style_test.mjs  graph_table_test.mjs  graph_viewport_test.mjs  run_acceptance.py  run_fuzz.sh  wasm_acceptance.mjs  wasm_smoke.mjs  wave_share_test.mjs  wave_sim_test.mjs  web_console_test.mjs  web_cookbook_test.mjs  web_graph_test.mjs  web_session_test.mjs  web_vars_test.mjs
wasm/: bindings.cpp
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.svelte  app.css  main.ts
web/src/lib/: format.ts  history.svelte.ts  katex-action.ts  outcome.ts  tabs.ts  theme.svelte.ts  vars.svelte.ts
web/src/lib/components/: CommandReference.svelte  ConsolePrompt.svelte  ConsoleReference.svelte  Cookbook.svelte  CopyButton.svelte  CopyField.svelte  ExpressionInput.svelte  GraphCalculator.svelte  GraphCanvas.svelte  GraphReference.svelte  GraphTable.svelte  History.svelte  Katex.svelte  MethodMeta.svelte  Notebook.svelte  NotebookCell.svelte  NotebooksPanel.svelte  ParsePreview.svelte  Plot.svelte  PluginResult.svelte  ResultCard.svelte  ResultDefinite.svelte  ResultDsolve.svelte  ResultEvaluate.svelte  ResultIntegral.svelte  ResultSolve.svelte  ResultSteps.svelte  ResultSystem.svelte  ResultTransform.svelte  SeriesChart.svelte  SourceFields.svelte  SpanHighlight.svelte  Tabs.svelte  ThemeToggle.svelte  VarChips.svelte  VariablesPanel.svelte  VectorFieldChart.svelte  WaveField.svelte
web/src/lib/engine/: index.ts  types.ts  worker.ts
web/src/lib/graph/: animate.ts  calculus.ts  classify.ts  contour.ts  expand.ts  functions.ts  graph.svelte.ts  lists.ts  reference.ts  registry.ts  share.ts  slopefield.ts  style.ts  table.ts  viewport.ts
web/src/lib/notebook/: console-ui.svelte.ts  cookbook.ts  docs.svelte.ts  notebook.svelte.ts  preview.ts  reference.ts  run.ts  suggest.ts  transcript.ts
web/src/lib/vars/: resolve.ts  session.ts  validate.ts
web/src/lib/wasm/: mathsolver.d.ts
web/src/lib/wave/: scenes.ts  share.ts  sim.ts  spectrum.ts
